public_html/wp-content/themes/transcribathon/css/item-page.css
/* ... */
.item-date-inner-container {
    display: inline-block;
    padding-right: 28px;
}
.item-date-input-container {
    display: inline-block;
}
.item-date-inner-container label {
    display: inline-block;
    margin-right: 10px;
    font-weight: 500;
    color: var(--main-color);
    font-family: var(--h-font-family);
}
.item-date-inner-container input {
    width: 94px;
}
.item-date-display-container {
    margin-top: 6px;
    display: inline-block;
}
.item-date-display {
    padding: 4px 8px;
    background-color: #f3f3f3;
    font-weight: bold;
}
.person-location-birth-inputs .ui-datepicker-trigger, .person-location-death-inputs .ui-datepicker-trigger {
    float: right;
    position: relative;
    bottom: 25px;
    left: 40px;
}
#back-to-story-title {
    color: var(--main-color)!important;
}
button.ui-datepicker-trigger {
    padding: 0;
    border: 0;
    margin-left: 7px;
    outline: none;
    width: 15px;
}
#enddateentry {
    margin-left: 4px;
}
#item-date-save-button {
    color: var(--main-color);
    float: right;
    background: none;
    border: none;
    font-size: 20px;
    margin-right: 22px;
}
#item-location-save-button {
    float: right;
}
#item-location-list {
    margin-bottom: 20px;
}
.person-item-data-container div:first-of-type {
    margin-bottom: 10px!important;
}
.delete-item-datas {
    position: relative;
    top: 1px;
}
.person-item-data-container input:not(:first-of-type) {
    margin-left: 9px!important;
}
.person-description-input {
    margin-bottom: 10px;
    border-radius: 0;
}
.person-description-input input {
    width: 100%!important;
    background-color: var(--bg-main-color);
    border-radius: 0;
}
#save-personinfo-button {
    float: unset!important;
}
.person-re-edit {
    width: 48%!important;
    background-color: var(--bg-main-color);
}
.person-re-edit-right {
    width: 48%;
    margin-left: 9px;
    background-color: var(--bg-main-color);
    float: right;
}
.person-data-edit-container .input-response button.ui-datepicker-trigger {
    position: absolute;
    right: -20px;
    left: unset;
    bottom: unset;
    top: 8px;
}
.person-data-edit-container .edit-location-cancel, .link-data-edit-container .edit-location-cancel {
    margin-right: 0!important;
}
.person-location-birth-inputs {
    padding-bottom: 0!important;
}
.person-data-edit-container input:focus-visible, .person-data-edit-container textarea:focus-visible {
    background-color: #fff;
    outline: var(--main-color);
    border-color: var(--main-color);
    border-radius: 0;
}
input#person-birthPlace-input, input#person-deathPlace-input, #person-birthDate-input, #person-deathDate-input,
.link-description-input textarea, .link-url-input input  {
    width: 49%;
    margin-right: 0!important;
    display: inline-block;
    background-color: var(--bg-main-color);
    border-radius: 0;
    border: none;
}
#person-firstName-input, #person-lastName-input, #person-description-input-field {
    border: none;
}
#person-firstName-input:focus-visible, #person-lastName-input:focus-visible, #keyword-input:focus-visible, .link-url-input input:focus-visible,
#person-description-input-field:focus-visible, #person-birthPlace-input:focus-visible, .link-description-input textarea:focus-visible,
#person-birthDate-input:focus-visible, #person-deathPlace-input:focus-visible, #person-deathDate-input:focus-visible,
#item-page-description-text:focus-visible, #person-wiki-input-field:focus-visible {
    border: 1px solid var(--main-color);
    background-color: #fff;
    outline: none;
    border-radius: 0!important;
}
.person-dots {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.item-name-header {
    font-weight: bold;
    letter-spacing: 0.025em;
}
.person-data-output-content {
    margin-top: 10px;
}
.person-data-edit-container {
    display: none;
    margin: 15px 0 5px 0;
}
.link-data-edit-container .link-url-input input, .link-data-edit-container .link-description-input textarea {
    background-color: var(--bg-main-color);
    border: 1px solid #ccc;
}
.link-data-edit-container {
    margin-bottom: 70px!important;
    padding-right: 70px!important;
}
#keyword-input {
    width: 100%!important;
    border-radius: 0;
    border: none;
    background-color: var(--bg-main-color);
    height: inherit;
}
.keyword-data-output-headlinee {
    margin-right: 6px;
}
.keyword-entry-headline {
    padding-bottom: 12px;
}
#keyword-input-container {
    display: inline-block;
    width: 29%;
    vertical-align: top;
    height: 35.5px;
}
.person.form-buttons-right {
    position: absolute;
    top: 5px;
    right: 45px;
}
#keyword-save-button {
    position: absolute;
    top: 0;
    right: 25px;
}
.link-url-input {
    margin-top: 10px;
    margin-bottom: 10px;
}
.link-url-input input {
    width: 100%;
    padding: 3px;
}
.link-description-input textarea {
    resize: none;
    outline: none;
    width: 100%;
}
#story-full-collapse {
    text-align: center;
    color: var(--main-color);
    font-size: 12px;
}
#item-data-section {
    background: #ffffff;
    padding: 10px;
    min-width: 400px;
}

#transcription-language-custom-selector:hover {
    color: #fff!important;
    background-color: var(--main-color)!important;
}
#people-view #fs-people {
    display: none;
}
/* Full screen viewer / change view */
/* Vertical Split */
.panel-right #mce-wrapper-transcription {
    max-height: 60vh;
}
.panel-right #item-page-transcription-text {
    max-height: inherit;
    min-height: 40vh;
}
#editor-tab.tabcontent {
    overflow: hidden!important;
}
.panel-right #item-data-content {
    height: 85%;
}
.panel-right #transcription-section {
    height: fit-content;
}
.panel-right .selected-lang {
    padding-top: 5px!important;
}
.panel-right .transcription-mini-metadata {
    height: 13%;
}

.selected-option:hover {
    background-color: var(--main-color)!important;
    color: #fff!important;
}
/* ... */

